# stanlyric

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_bm25_song_identifier.ipynb
scripts/: build_index.py  discover_hf_files.py  download_data.py  evaluate.py  export_song_metadata.py  export_stanlyric_web.py  prepare_corpus.py  search.py
src/: __init__.py  bm25.py  data.py  evaluation.py  search.py  text.py  visualization.py
src/stanlyric/: __init__.py  evaluation.py  hf_download.py  search.py
