[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stanlyric"
version = "0.1.0"
description = "BM25 lyric fragment search and song identification over lyrics datasets."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Dheeraj Dhillon" }]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "huggingface_hub>=0.23.0",
    "datasets>=2.19.0",
    "pyarrow>=14.0.0",
    "joblib>=1.3.0",
    "ipykernel>=6.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
